fix for double border

--- a/lesson_15/css/homework_15.css
+++ b/lesson_15/css/homework_15.css
@@ -94,7 +94,8 @@ h2{
     flex: 1 1 200px;
     border: 1px solid #E6E6E6;
     position: relative;
-    transition: all 0.3s;
+    transition: border-color 0.3s, box-shadow 0.3s;
+    margin: 0 -1px -1px 0;
     
 }
 .card__image {
@@ -184,6 +185,7 @@ p{
 .card__item:hover{
     border:1px solid #2C742F;
     box-shadow: 0px 0px 12px 0px rgba(32, 181, 38, 0.32);
+    z-index: 2;
     
 }
 
